--- a/assets/index.html
+++ b/assets/index.html
@@ -211,7 +211,7 @@
         <button
           type="button"
           class="btn btn-dark"
-          onclick="location.href='/gojoin'"
+          onclick="window.location.href='/join.html'"
         >
           회원가입
         </button>
